--- a/Website/package.json
+++ b/Website/package.json
@@ -6,7 +6,7 @@
     "start": "node_modules/.bin/gulp"
   },
   "dependencies": {
-    "@octokit/rest": "^15.2.7",
+    "@octokit/rest": "^15.17.0",
     "archiver": "^3.0.0",
     "async": "^2.6.1",
     "body-parser": "^1.18.3",
@@ -18,37 +18,38 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "express-validator": "^5.0.0",
-    "express-ws": "^3.0.0",
+    "express-validator": "^5.3.0",
+    "express-ws": "^4.0.0",
     "file-saver": "1.3.8",
     "fs": "0.0.1-security",
-    "glob": "^7.1.2",
+    "glob": "^7.1.3",
     "jade": "~1.11.0",
     "jszip": "^3.1.5",
-    "mongoose": "^5.0.1",
+    "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
-    "multer": "^1.3.0",
+    "multer": "^1.4.1",
     "node-fs-extra": "^0.8.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "request": "^2.85.0",
+    "request": "^2.88.0",
     "request-progress": "^3.0.0",
     "request-promise": "^4.2.2",
     "save": "^2.3.2",
     "serve-favicon": "~2.4.2",
-    "sqlite3": "^3.1.13",
+    "sqlite3": "^4.0.4",
     "superagent": "^3.8.3",
+    "uglify-js": "^3.4.9",
     "unzip": "^0.1.11",
-    "util": "^0.10.3",
-    "ws": "^5.1.1"
+    "util": "^0.10.4",
+    "ws": "^5.2.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
-    "nodemon": "^1.17.3"
+    "gulp-nodemon": "^2.4.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "nodemon": "^1.18.6"
   }
 }
